--- a/apps/nf/src/app/app.component.html
+++ b/apps/nf/src/app/app.component.html
@@ -1,8 +1,3 @@
-<div style="text-align: center">
-  <h1>Welcome to nf!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-  />
-</div>
-<div>Message: {{ hello$ | async | json }}</div>
+
+<!-- <div>Message: {{ hello$ | async | json }}</div> -->
+<router-outlet></router-outlet>
