--- a/apps/nf/src/app/app.component.html
+++ b/apps/nf/src/app/app.component.html
@@ -1,3 +1,41 @@
+<nz-layout>
 
-<!-- <div>Message: {{ hello$ | async | json }}</div> -->
-<router-outlet></router-outlet>
+  <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="null">
+    <div class="logo"></div>
+    <ul nz-menu nzTheme="dark" nzMode="inline">
+      <li nz-submenu nzTitle="Star Wars" nzIcon="global">
+        <ul>
+          <li nz-menu-item [routerLink]="['/people']">Characters</li>
+          <li nz-menu-item [routerLink]="['/planets']">Planets</li>
+          <li nz-menu-item>Starships</li>
+        </ul>
+      </li>
+      <!--<li nz-submenu nzTitle="Team" nzIcon="team">
+        <ul>
+          <li nz-menu-item>Team 1</li>
+          <li nz-menu-item>Team 2</li>
+        </ul>
+      </li>
+      <li nz-menu-item>
+        <i nz-icon nzType="file"></i>
+        <span>File</span>
+      </li>-->
+    </ul>
+  </nz-sider>
+  <nz-layout>
+    <nz-header>
+      <i class="trigger" nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'" (click)="isCollapsed = !isCollapsed"></i>
+    </nz-header>
+    <nz-content>
+      <nz-breadcrumb>
+        <nz-breadcrumb-item>User</nz-breadcrumb-item>
+        <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
+      </nz-breadcrumb>
+      <div class="inner-content">
+        <router-outlet></router-outlet>
+      </div>
+    </nz-content>
+    <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+  </nz-layout>
+
+</nz-layout>
